common/common-kube.yaml
# namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
   name: sbarnacle
# secret.yaml
